crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__variables__old_global_variable_3.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/variables.rs
assertion_line: 30
expression: "goto_definition(r#\"\n%! main.sp\nnew foo;\nbar() {\n    foo = 1;\n     |\n     ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 2,
        "character": 4
      },
      "end": {
        "line": 2,
        "character": 7
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 4
      },
      "end": {
        "line": 0,
        "character": 7
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 4
      },
      "end": {
        "line": 0,
        "character": 7
      }
    }
  }
]
